# cubby-clipboard

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE.md  README.md  README_CN.md  SECURITY.md  bump_version.ps1  cliff.toml  package.json  pnpm-lock.yaml  tsconfig.json
.claude/: settings.local.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/scripts/: check-site.mjs
.github/workflows/: ci.yml  pages.yml  publish-store-packages.yml  release.yml  website.yml
design/assets/: launch-stills.html  ocr-demo-scenes.html
docs/: BASELINE_AUDIT.md  CAPTURE_PROBE_RESULTS.md  CLIPBOARD_RELIABILITY.md  GITHUB_PAGES_COMPLETE.md  PRODUCTION_CAPTURE_RESULTS.md  RELEASE_CHECKLIST.md  REMOTE_SESSIONS.md  SEARCH_ARCHITECTURE.md  SHORTCUT_ACCEPTANCE.md  SHORTCUT_BEHAVIOR.md  WEBSITE_DEPLOYMENT.md  project_analysis.md  signpath-setup.md
docs/assets/: README.md  comparison-sources.md
docs/assets/social/: x-account-copy.md
docs/press-kit/: README.md  description.txt  links.txt
frontend/: index.html
frontend/src/: App.tsx  constants.ts  index.css  main.tsx
frontend/src/components/: ClipCard.tsx  ClipList.tsx  ConfirmDialog.tsx  ContextMenu.tsx  ControlBar.tsx  FlyoutHeader.tsx  SearchBar.tsx  SettingsPanel.tsx  WelcomeOverlay.tsx
frontend/src/components/ui/: Select.tsx
frontend/src/debug/: demoData.ts
frontend/src/hooks/: useKeyboard.ts  useLanguage.ts  useSystemAccent.ts  useTimeTick.ts  useUpdater.ts
frontend/src/i18n/: config.ts
frontend/src/i18n/locales/: de.json  en.json  fr.json  ja.json  zh.json
frontend/src/types/: index.ts
frontend/src/utils/: platform.ts
frontend/src/windows/: SettingsWindow.tsx
product_pages/: 404.html  CNAME  GITHUB_PAGES_SETUP.md  README.md  _config.yml  _headers  _worker.js  analytics.js  index.html  privacy.html  release-links.js  robots.txt  site.webmanifest  sitemap.xml  start.html  styles.css  support.html  terms.html  worker.test.mjs
product_pages/_private/: admin-dashboard.txt
scripts/: audit-rust.ps1  check-release.mjs  publish-store-installer.ps1  smoke-release.ps1  test-clipboard-capture.ps1  test-clipboard-formats.ps1  test-paste-compat.ps1  test-remote-trigger.ps1  test-win-v-helper.ps1
src-tauri/: Cargo.toml  tauri.conf.json  tauri.store.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: clipboard.rs  commands.rs  constants.rs  crypto.rs  database.rs  ditto_import.rs  lib.rs  main.rs  models.rs  ocr.rs  ocr_queue.rs  paste_engine.rs  search_index.rs  secrets.rs  settings_commands.rs  settings_manager.rs  shortcuts.rs  win_v_replacement.rs
