[package]
name = "PastePaw"
version = "1.3.6"
description = "A beautiful clipboard history manager"
authors = ["XueshiQiao"]
license = "GPL-3.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon", "image-png", "devtools"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["sqlite", "chrono", "uuid", "runtime-tokio"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
image = "0.24"

futures = "0.3"
dirs = "5"
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }
once_cell = "1"
base64 = "0.22.1"
tauri-plugin-autostart = "2"
tauri-plugin-log = "2.8.0"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-aptabase = "1"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
log = "0.4.29"
window-vibrancy = { git = "https://github.com/XueshiQiao/window-vibrancy.git" }
reqwest = { version = "0.13.1", features = ["json"] }
dark-light = "2.0.0"
tauri-plugin-clipboard-x = "2.0.1"
tauri-plugin-dialog = "2"
clipboard-rs = "0.2"


[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation", "Win32_System_Threading", "Win32_System_ProcessStatus", "Win32_Security", "Win32_System_DataExchange", "Win32_UI_Shell", "Win32_Graphics_Gdi", "Win32_Graphics_Dwm", "Win32_Storage_FileSystem", "Win32_System_SystemInformation", "Win32_System_Memory", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Com"] }


[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
app-store = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
